fixed bug in it

--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_book_project
-description: A new Flutter application.
+name: samproject
+description: A Flutter application about examining
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -43,9 +43,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-  assets:
-    - assets/images/
-    - assets/data/
+  #assets:
+  #  - assets/images/
+  #  - assets/data/
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
