--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -24,8 +24,8 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: 8.7.0
-
-
+  http: 0.12.2
+  rflutter_alert: 1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
