--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
