--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -20,16 +20,11 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
-
-
-
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  http: ^0.12.2
-
+  font_awesome_flutter: 8.10.0
+  image_picker: ^0.6.7+12
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,10 +39,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-  #assets:
-  #  - assets/images/
-  #  - assets/data/
-
+  assets:
+    - assets/images/unnamed.png
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
