--- a/samproject/ios/Flutter/Generated.xcconfig
+++ b/samproject/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=F:\FluterSdk\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\nema\Desktop\daneshgah\design_system\App\Tahlil_Mobile\Tahlil_Mobile\samproject
+FLUTTER_APPLICATION_PATH=C:\Users\nema\Desktop\daneshgah\design_system\App2\Tahlil_Mobile\samproject
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build\ios
