--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -24,6 +24,9 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: 8.10.0
+  image_picker: ^0.6.7+12
+  shared_preferences: ^0.5.12+2
+  http: ^0.12.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
