--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   font_awesome_flutter: 8.7.0
   http: 0.12.2
   rflutter_alert: 1.1.0
+  shared_preferences: 0.5.12
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
