Create Login Signup Profile Layout

--- a/samproject/android/local.properties
+++ b/samproject/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=F:\\sdk
-flutter.sdk=F:\\FluterSdk\\flutter
+sdk.dir=C:\\Users\\asus\\AppData\\Local\\Android\\sdk
+flutter.sdk=E:\\Software\\flutter
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.versionCode=1
