--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: 0.12.2
   rflutter_alert: 1.1.0
   shared_preferences: 0.5.12
+  image_picker: ^0.6.7+12
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
@@ -46,7 +47,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/img/login_logo.png
+    - assets/img/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
