--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   rflutter_alert: 1.1.0
   shared_preferences: 0.5.12
   image_picker: ^0.6.7+12
+  rounded_loading_button: ^1.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
