--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   loading_overlay: ^0.2.1
   rounded_loading_button: ^1.0.0
   auto_size_text: 2.1.0
-  drag_and_drop_lists: ^0.2.9+2
+  shamsi_date: ^0.9.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
