--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   rounded_loading_button: ^1.0.0
   auto_size_text: 2.1.0
   shamsi_date: ^0.9.1
+  marquee: 1.6.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
