--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   shamsi_date: ^0.9.1
   marquee: 1.6.1
   scroll_snap_list: 0.5.1
+  flutter_countdown_timer: ^1.5.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
