--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   marquee: 1.6.1
   scroll_snap_list: 0.5.1
   flutter_countdown_timer: ^1.5.0
+  flutter_uploader: ^1.2.0
+  flutter_downloader: ^1.5.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
