--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   marquee: 1.6.1
   persian_datetime_picker: ^1.0.7
   flutter_countdown_timer: ^1.5.0
+  scroll_snap_list: 0.5.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
