--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   scroll_snap_list: 0.5.1
   flutter_downloader: ^1.5.2
   path_provider: ^1.6.24
+  charts_flutter: ^0.9.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
