--- a/samproject/pubspec.yaml
+++ b/samproject/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_downloader: ^1.5.2
   path_provider: ^1.6.24
   charts_flutter: ^0.9.0
+  url_launcher: ^5.7.10
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
